# PER_MEA_LYINCROYAP

./: CLAUDE.md  README.md  lora_uplink_test.py  monitor_both.py  monitor_drone.py  test_runner
docs/: gps_explication.listing  gps_explication.tex  rapport_projet.aux  rapport_projet.out  rapport_projet.tex  rapport_projet.toc
lora_test_rx/: lora_test_rx.ino
lora_test_tx/: lora_test_tx.ino
main/: main.ino
main/src/app/: DroneApp.cpp  DroneApp.h
main/src/comm/: LoRaComm.cpp  LoRaComm.h
main/src/config/: BoardConfig.h  Calibration.h  DebugConfig.h
main/src/control/: AutoController.cpp  AutoController.h  ManualController.cpp  ManualController.h  ModeManager.cpp  ModeManager.h
main/src/core/: Types.h
main/src/drivers/: AxpPower.cpp  AxpPower.h  BatteryAdc.cpp  BatteryAdc.h  GpsUart.cpp  GpsUart.h  LoRaRadio.cpp  LoRaRadio.h  McpwmActuators.cpp  McpwmActuators.h  RcReceiver.cpp  RcReceiver.h
main/src/navigation/: MissionManager.cpp  MissionManager.h  MissionPlan.h  NavigationConfig.h  NavigationSelector.h  Navigator.cpp  Navigator.h  navigation.h  oldNavigation.h
test/: CMakeLists.txt  test_runner.cpp
transceiver/: transceiver.ino
